<resources>
    <string name="app_name">Petagram</string>
    <string name="pnombre">perritu \n oli \n oli</string>
    <string name="plikes">10</string>
    <string name="action_favorite"> </string>
    <string name="mcontacto">Contacto</string>
    <string name="mAbout">Acerca de</string>
    <string name="hint_nombre">Nombre: </string>
    <string name="hint_correo">Correo: </string>
    <string name="hint_mensaje">Mensaje: </string>
    <string name="btnenviar">Enviar comentario</string>
    <string name="about">\n \n Petagram creada por Victor Ibarra </string>
    <string name="mCuenta">Configurar cuenta</string>
    <string name="btnEnviarcuenta">Guardar Cuenta</string>
    <string name="hintcuenta">Escribe tu usuario</string>
    <string name="nPerfil">Abrir perfil</string>
    <string name="nFollow">Follow</string>
    <string name="nUsuario">Ver usuario</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
</resources>
